@@ -168,4 +168,32 @@ class WCPay_Multi_Currency_Currency_Switcher_Block_Tests extends WP_UnitTestCase
 			],
 		];
 	}
+
+	public function test_widget_renders_hidden_input() {
+		$_GET       = [
+			'test_name'  => 'test_value',
+			'test_array' => [ 0 => [ 0 => 'test_array_value' ] ],
+			'named_key'  => [ 'key' => 'value' ],
+		];
+		$attributes = [
+			[
+				'symbol' => false,
+				'flag'   => true,
+			],
+			false,
+		];
+
+		$this->mock_compatibility->expects( $this->once() )
+			->method( 'should_hide_widgets' )
+			->willReturn( false );
+
+		$this->mock_multi_currency->expects( $this->once() )
+			->method( 'get_enabled_currencies' )
+			->willReturn( $this->mock_currencies );
+
+		$result = $this->currency_switcher_block->render_block_widget( $attributes, '' );
+		$this->assertStringContainsString( '<input type="hidden" name="test_name" value="test_value" />', $result );
+		$this->assertStringContainsString( '<input type="hidden" name="test_array[0][0]" value="test_array_value" />', $result );
+		$this->assertStringContainsString( '<input type="hidden" name="named_key[key]" value="value" />', $result );
+	}
 }
